--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ env:
   AZURE_WEBAPP_NAME: mclptask8webapp0630    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1'           # set this to the dot net version to use
-  AZURE_RESOURCEGROUP_NAME: ContosoSampe3-RG # set this to your preferred resource group name
+  AZURE_RESOURCEGROUP_NAME: ContosoSample3-RG # set this to your preferred resource group name
   SQLSERVER_NAME: mclptask8sqlserver0630                          # set this to your preferred sql server name
   DATABASE_NAME: mclptask8database0630                  # set this to your preferred sql database name
   SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
