--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,7 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
+  ASPNETCORE_ENVIRONMENT: Development
   AZURE_WEBAPP_NAME: mclptask8webapp0630    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1'           # set this to the dot net version to use
